Donate via PayPal: https://www.paypal.com/xclick/business=zippy%40runuo.com&item_name=Razor&no_shipping=1&no_note=1&tax=0&currency_code=USD

Please report any and all bugs you encounter at http://www.runuo.com/forums/forumdisplay.php?f=44

Additions:

Changes/Fixes:
-The UOPS window will now correctly display (and update) the positions of party members under all circumstances.
-RPV Playback has become a good deal smoother (especially when theres a lot going on on screen).  Playback at Normal speed should now look proper.
-RPV Seeking is once again working.
-Un/Re-Equip hands when using potions will now correctly wait to re-equip your hands until all other pending potion requests have been completed.
-Screen shots should always be correctly centered now.
-Stun and Disarm hotkeys now have a slight 'spam' delay (0.5 sec) to prevent them from being accidentally toggled quickly by holding the key down for too long.
-If a macro which drags an item is stopped before the item is dropped the item will now be placed in your backpack instead of on the ground.
-Last Target can no longer be the ground or a piece of the map.  Only dynamic items and characters can be set to the last target now.
-Attempting to use the restock agent on something that is too far away will now give you an error (instead of just blindly doing it anyway).
-Screenshot list will now correctly update when a first screen shot is taken.